--- a/index.html
+++ b/index.html
@@ -463,7 +463,6 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div> 
 
         <div class="mt-3">
@@ -490,10 +489,52 @@
         <div class="mt-3">
           <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="50">
             <div class="member-info">
-              <h4>Web</h4>                
+              <h4>Web Developement</h4>                
               <div class="row text-center">
                 <div class="col m-4">
                   <img alt="" src="assets/img/html5.png" class="responsive-img">HTML5
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/css3.png" class="responsive-img">CSS3
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/bootstrap.png" class="responsive-img">Bootstrap
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/react.svg" class="responsive-img">React
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/django.svg" class="responsive-img">Django
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/node.png" class="responsive-img">node
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="mt-3">
+          <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="50">
+            <div class="member-info">
+              <h4>Software Developement</h4>                
+              <div class="row text-center">
+                <div class="col m-4">
+                  <img alt="" src="assets/img/github.png" class="responsive-img">GitHub
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/docker.png" class="responsive-img">Docker
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/xcode.jpg" class="responsive-img">Xcode
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/npm.png" class="responsive-img">npm
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/react.svg" class="responsive-img">React
+                </div>
+                <div class="col m-4">
+                  <img alt="" src="assets/img/node.png" class="responsive-img">node
                 </div>
               </div>
           </div>
